@@ -12,6 +12,8 @@ PHP                                                                        NEWS
 
 - Fixed crash in SQLiteDatabase::ArrayQuery() and SQLiteDatabase::SingleQuery()
   when calling using Reflection. (Felipe)
+- Fixed crash when instantiating PDORow and PDOStatement through Reflection.
+  (Felipe)
 - Changed ini file directives [PATH=](on Win32) and [HOST=](on all) to be case 
   insensitive (garretts)
 - Restored shebang line check to CGI sapi (not checked by scanner anymore).
